crates/tokmd-format/tests/snapshots/snapshot_deep__deep_diff_all_added.snap
---
source: crates/tokmd-format/tests/snapshot_deep.rs
expression: md
---
## Diff: empty → v1.0

### Summary

|Metric|From|To|Delta|Change|
|---|---:|---:|---:|---:|
|LOC|0|1000|+1000|+100.0%|
|Lines|0|1200|+1200|+100.0%|
|Files|0|10|+10|+100.0%|
|Bytes|0|50000|+50000|+100.0%|
|Tokens|0|2500|+2500|+100.0%|

### Language Movement

|Type|Count|
|---|---:|
|Changed|3|
|Added|3|
|Removed|0|
|Modified|0|

### Language Breakdown

|Language|Old LOC|New LOC|Delta|
|---|---:|---:|---:|
|Go|0|300|+300|
|Python|0|200|+200|
|Rust|0|500|+500|
|**Total**|0|1000|+1000|
