crates/tokmd-format/tests/snapshots/snapshot_deep__deep_export_csv_children.snap
---
source: crates/tokmd-format/tests/snapshot_deep.rs
expression: output
---
path,module,lang,kind,code,comments,blanks,lines,bytes,tokens
src/lib.rs,src,Rust,parent,200,40,20,260,10000,500
templates/index.html,templates,HTML,parent,80,5,10,95,4000,200
templates/index.html,templates,JavaScript,child,30,2,3,35,1500,75
templates/index.html,templates,CSS,child,20,1,2,23,1000,50
