crates/tokmd-format/tests/snapshots/snapshot_deep__deep_lang_json_embedded.snap
---
source: crates/tokmd-format/tests/snapshot_deep.rs
expression: pretty
---
{
  "args": {
    "children": "separate",
    "format": "json",
    "top": 0,
    "with_files": true
  },
  "children": "separate",
  "generated_at_ms": 0,
  "mode": "lang",
  "rows": [
    {
      "avg_lines": 100,
      "bytes": 20000,
      "code": 400,
      "files": 5,
      "lang": "HTML",
      "lines": 500,
      "tokens": 1000
    },
    {
      "avg_lines": 30,
      "bytes": 6000,
      "code": 120,
      "files": 5,
      "lang": "JavaScript (embedded)",
      "lines": 150,
      "tokens": 300
    },
    {
      "avg_lines": 33,
      "bytes": 4000,
      "code": 80,
      "files": 3,
      "lang": "CSS (embedded)",
      "lines": 100,
      "tokens": 200
    }
  ],
  "scan": {
    "config": "auto",
    "excluded": [],
    "hidden": false,
    "no_ignore": false,
    "no_ignore_dot": false,
    "no_ignore_parent": false,
    "no_ignore_vcs": false,
    "paths": [
      "."
    ],
    "treat_doc_strings_as_comments": false
  },
  "schema_version": 2,
  "status": "complete",
  "tool": {
    "name": "tokmd",
    "version": "0.0.0"
  },
  "top": 0,
  "total": {
    "avg_lines": 58,
    "bytes": 30000,
    "code": 600,
    "files": 13,
    "lines": 750,
    "tokens": 1500
  },
  "warnings": [],
  "with_files": true
}
